# azure-software-radio

./: .gitignore  .pylintrc  CONTRIBUTING.md  README.md  SUPPORT.md
.github/workflows/: checkin_ci.yaml  ci.yaml  issues.yaml  nightly_ci.yaml
.pipelines/: OneBranch.Official.yml
Pipelines/: ci_pipeline.yml
gr-azure-software-radio/: .gitignore  CMakeLists.txt  MANIFEST.md  NOTICE  README.md  cgmanifest.json
gr-azure-software-radio/apps/: CMakeLists.txt
gr-azure-software-radio/cmake/: cmake_uninstall.cmake.in
gr-azure-software-radio/docs/: CMakeLists.txt  FAQ.md  README.md
gr-azure-software-radio/examples/: README.md  blob_az_login_quickstart.md  blob_example_resources.json  blob_managed_id_quickstart.md  blob_sink_demo.grc  blob_sink_example.grc  blob_sink_rate_demo.grc  blob_source.py  blob_source_example.grc  difi_paired_example.grc  difi_quickstart.md  difi_standalone.grc  event_hub_example_resources.json  event_hubs_quickstart_cli.md  eventhub_sink_example.grc  eventhub_source_example.grc  key_vault_example_resources.json  key_vault_rbac_az_login_quickstart.md  key_vault_rbac_managed_id_quickstart.md  keyvault.grc  managed_identity_cli_quickstart.md  rest_api_quickstart.md  rest_example.grc
gr-azure-software-radio/python/bindings/: CMakeLists.txt  README.md  bind_oot_file.py  difi_sink_cpp_python.cc  difi_source_cpp_python.cc  failed_conversions.txt  header_utils.py  python_bindings.cc
gr-azure-software-radio/python/bindings/docstrings/: difi_sink_cpp_pydoc_template.h  difi_source_cpp_pydoc_template.h
pages/: devvm.md
tutorials/: README.md
(+72 files in other folders)
